Corrections des tests dans le backend